--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -18,7 +18,7 @@
     </nav>
 
     <mat-tab-group>
-      <ng-template *ngIf="IOrders == 1">
+      <ng-template [ngIf]="IOrders == 1">
         <mat-tab>
           <ng-template mat-tab-label>
             Internal Orders
@@ -148,7 +148,7 @@
           </div>
         </mat-tab>
       </ng-template>
-      <ng-template *ngIf="IPreparedOrders == 1">
+      <ng-template [ngIf]="IPreparedOrders == 1">
         <mat-tab>
           <ng-template mat-tab-label>
             Prepared Orders
@@ -301,7 +301,7 @@
         </mat-tab>
       </ng-template>
 
-      <ng-template *ngIf="IDispatching == 1">
+      <ng-template [ngIf]="IDispatching == 1">
         <mat-tab>
           <ng-template mat-tab-label>
             Dispatching
@@ -437,151 +437,153 @@
         </mat-tab>
       </ng-template>
 
-      <ng-template *ngIf="ICancelledTransactions == 1">
-        <ng-template mat-tab-label>
-          Cancelled Transactions
-          &nbsp; <span class="badge badge-danger zerobadge{{ totalCancelledOrderParent }}">{{ totalCancelledOrderParent
-            }}</span>
-        </ng-template>
+      <ng-template [ngIf]="ICancelledTransactions == 1">
+        <mat-tab>
+          <ng-template mat-tab-label>
+            Cancelled Transactions
+            &nbsp; <span class="badge badge-danger zerobadge{{ totalCancelledOrderParent }}">{{
+              totalCancelledOrderParent
+              }}</span>
+          </ng-template>
+
+          <div class="col-sm-12" style="padding-top: 2em;">
+            <div class="d-flex">
+
+              <div class="p-2">
+                <div class="input-group searchBtnStyle">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
+                  </div>
+                  <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy">
+                    <option value="department_name">DEPARTMENT</option>
+                    <option value="mrs_req_desc">DESCRIPTION</option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="p-2">
+                <div class="input-group searchBtnStyle">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
+                  </div>
+                  <input type="search" autocomplete="off" class="form-control" placeholder="Find here...."
+                    id="txtSearchText" name="SearchText" [(ngModel)]="searchText"
+                    (keyup)="onSearchCancelledOrders($event)" />
+                </div>
+              </div>
+
+            </div>
+
+            <!-- table -->
+            <div class="col-lg-12">
+              <div class="d-flex">
+                <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain">
+                  <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
+                    <thead>
+                      <tr class="text-light header-bg-color-um system-name">
+                        <th>ID</th>
+                        <th>Preparation Date</th>
+                        <th>Department</th>
+                        <th>Description</th>
+                        <th>Requested By</th>
+                        <th>Total Prepared Item(s)</th>
+                        <th>Total Reject Item(s)</th>
+                        <th class="text-center">Action</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr
+                        *ngFor="let item of CancelledOrderList | filter: searchBy : searchText | paging : currentPageIndexCancelledOrder : pageSize; let i = index">
+                        <td>{{item.mrs_id}}</td>
+                        <td>{{item.is_approved_prepa_date | date: "MM/dd/yyyy" }}</td>
+                        <td>{{item.department_name}}</td>
+                        <td>{{item.mrs_req_desc}}</td>
+                        <td>{{item.mrs_requested_by}}</td>
+                        <td>{{item.totalPreparedItems | number}}</td>
+                        <td>{{item.totalRejectItems | number}}</td>
+                        <td class="text-center">
+
+                          <button (click)="onViewCancelledClick(item)" data-toggle="modal"
+                            data-target="#preparedOrderCancelModal" data-backdrop="false" title="View"
+                            data-keyboard="false" class="editbtnStyle" color="success" mat-stroked-button>
+                            <span class="fa fa-eye"></span> View
+                          </button>
+                          <ng-container *ngIf="item.is_wh_checker_cancel == 1">
+                            <button (click)="onReturnParentPreparationOrderClick(item)" title="Return"
+                              data-keyboard="false" class="editbtnStyle" color="success" mat-stroked-button>
+                              <span class="fa fa-undo"></span> Return
+                            </button>
+                          </ng-container>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+
+            <!-- pagination -->
+            <div class="col-md-12">
+              <ul class="pagination paginationStyle justify-content-center mt-1">
+                <li class="page-item" (click)="onPageIndexClickedCancelledOrder(currentPageIndexCancelledOrder - 1)">
+                  <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
+                    onclick="return false">Prev</a>
+                </li>
+
+                <ng-container *ngIf="pagesCancelledTransaction.length <= 10">
+                  <li class="page-item" *ngFor="let page of pagesCancelledTransaction"
+                    [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexCancelledOrder}"
+                    (click)="onPageIndexClickedCancelledOrder(page.pageIndex)">
+                    <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
+                  </li>
+                </ng-container>
+
+                <ng-container *ngIf="pagesCancelledTransaction.length > 10">
+                  <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelledOrder == 0}"
+                    (click)="onPageIndexClickedCancelledOrder(0)">
+                    <a class="page-link" href="#" onclick="return false">1</a>
+                  </li>
+
+                  <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelledOrder == 1}"
+                    (click)="onPageIndexClickedCancelledOrder(1)">
+                    <a class="page-link" href="#" onclick="return false">2</a>
+                  </li>
+
+                  <li
+                    *ngIf="currentPageIndexCancelledOrder > 1 && currentPageIndexCancelledOrder < pagesCancelledTransaction.length - 2">
+                    &nbsp;...&nbsp;</li>
+
+                  <li class="page-item" [ngClass]=" 'link-active-paging' "
+                    (click)="onPageIndexClickedCancelledOrder(currentPageIndexCancelledOrder)"
+                    *ngIf="currentPageIndexCancelledOrder > 1 && currentPageIndexCancelledOrder < pagesCancelledTransaction.length - 2">
+                    <a class="page-link" href="#" onclick="return false">{{currentPageIndexCancelledOrder + 1}}</a>
+                  </li>
+
+                  <li>&nbsp;...&nbsp;</li>
+
+                  <li class="page-item"
+                    [ngClass]="{ 'link-active-paging': currentPageIndexCancelledOrder == pagesCancelledTransaction.length - 2}"
+                    (click)="onPageIndexClickedCancelledOrder(pagesCancelledTransaction.length - 2)">
+                    <a class="page-link" href="#" onclick="return false">{{pagesCancelledTransaction.length - 1}}</a>
+                  </li>
+
+                  <li class="page-item"
+                    [ngClass]="{ 'link-active-paging': currentPageIndexCancelledOrder == pagesCancelledTransaction.length - 1}"
+                    (click)="onPageIndexClickedCancelledOrder(pagesCancelledTransaction.length - 1)">
+                    <a class="page-link" href="#" onclick="return false">{{pagesCancelledTransaction.length}}</a>
+                  </li>
+                </ng-container>
+
+                <li class="page-item" (click)="onPageIndexClickedCancelledOrder(currentPageIndexCancelledOrder + 1)">
+                  <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
+                    onclick="return false">Next</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+        </mat-tab>
       </ng-template>
-      <div class="col-sm-12" style="padding-top: 2em;">
-        <div class="d-flex">
-
-          <div class="p-2">
-            <div class="input-group searchBtnStyle">
-              <div class="input-group-prepend">
-                <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
-              </div>
-              <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy">
-                <option value="department_name">DEPARTMENT</option>
-                <option value="mrs_req_desc">DESCRIPTION</option>
-              </select>
-            </div>
-          </div>
-
-          <div class="p-2">
-            <div class="input-group searchBtnStyle">
-              <div class="input-group-prepend">
-                <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
-              </div>
-              <input type="search" autocomplete="off" class="form-control" placeholder="Find here...."
-                id="txtSearchText" name="SearchText" [(ngModel)]="searchText"
-                (keyup)="onSearchCancelledOrders($event)" />
-            </div>
-          </div>
-
-        </div>
-
-        <!-- table -->
-        <div class="col-lg-12">
-          <div class="d-flex">
-            <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain">
-              <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
-                <thead>
-                  <tr class="text-light header-bg-color-um system-name">
-                    <th>ID</th>
-                    <th>Preparation Date</th>
-                    <th>Department</th>
-                    <th>Description</th>
-                    <th>Requested By</th>
-                    <th>Total Prepared Item(s)</th>
-                    <th>Total Reject Item(s)</th>
-                    <th class="text-center">Action</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr
-                    *ngFor="let item of CancelledOrderList | filter: searchBy : searchText | paging : currentPageIndexCancelledOrder : pageSize; let i = index">
-                    <td>{{item.mrs_id}}</td>
-                    <td>{{item.is_approved_prepa_date | date: "MM/dd/yyyy" }}</td>
-                    <td>{{item.department_name}}</td>
-                    <td>{{item.mrs_req_desc}}</td>
-                    <td>{{item.mrs_requested_by}}</td>
-                    <td>{{item.totalPreparedItems | number}}</td>
-                    <td>{{item.totalRejectItems | number}}</td>
-                    <td class="text-center">
-
-                      <button (click)="onViewCancelledClick(item)" data-toggle="modal"
-                        data-target="#preparedOrderCancelModal" data-backdrop="false" title="View" data-keyboard="false"
-                        class="editbtnStyle" color="success" mat-stroked-button>
-                        <span class="fa fa-eye"></span> View
-                      </button>
-                      <ng-container *ngIf="item.is_wh_checker_cancel == 1">
-                        <button (click)="onReturnParentPreparationOrderClick(item)" title="Return" data-keyboard="false"
-                          class="editbtnStyle" color="success" mat-stroked-button>
-                          <span class="fa fa-undo"></span> Return
-                        </button>
-                      </ng-container>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-
-        <!-- pagination -->
-        <div class="col-md-12">
-          <ul class="pagination paginationStyle justify-content-center mt-1">
-            <li class="page-item" (click)="onPageIndexClickedCancelledOrder(currentPageIndexCancelledOrder - 1)">
-              <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
-                onclick="return false">Prev</a>
-            </li>
-
-            <ng-container *ngIf="pagesCancelledTransaction.length <= 10">
-              <li class="page-item" *ngFor="let page of pagesCancelledTransaction"
-                [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexCancelledOrder}"
-                (click)="onPageIndexClickedCancelledOrder(page.pageIndex)">
-                <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
-              </li>
-            </ng-container>
-
-            <ng-container *ngIf="pagesCancelledTransaction.length > 10">
-              <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelledOrder == 0}"
-                (click)="onPageIndexClickedCancelledOrder(0)">
-                <a class="page-link" href="#" onclick="return false">1</a>
-              </li>
-
-              <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelledOrder == 1}"
-                (click)="onPageIndexClickedCancelledOrder(1)">
-                <a class="page-link" href="#" onclick="return false">2</a>
-              </li>
-
-              <li
-                *ngIf="currentPageIndexCancelledOrder > 1 && currentPageIndexCancelledOrder < pagesCancelledTransaction.length - 2">
-                &nbsp;...&nbsp;</li>
-
-              <li class="page-item" [ngClass]=" 'link-active-paging' "
-                (click)="onPageIndexClickedCancelledOrder(currentPageIndexCancelledOrder)"
-                *ngIf="currentPageIndexCancelledOrder > 1 && currentPageIndexCancelledOrder < pagesCancelledTransaction.length - 2">
-                <a class="page-link" href="#" onclick="return false">{{currentPageIndexCancelledOrder + 1}}</a>
-              </li>
-
-              <li>&nbsp;...&nbsp;</li>
-
-              <li class="page-item"
-                [ngClass]="{ 'link-active-paging': currentPageIndexCancelledOrder == pagesCancelledTransaction.length - 2}"
-                (click)="onPageIndexClickedCancelledOrder(pagesCancelledTransaction.length - 2)">
-                <a class="page-link" href="#" onclick="return false">{{pagesCancelledTransaction.length - 1}}</a>
-              </li>
-
-              <li class="page-item"
-                [ngClass]="{ 'link-active-paging': currentPageIndexCancelledOrder == pagesCancelledTransaction.length - 1}"
-                (click)="onPageIndexClickedCancelledOrder(pagesCancelledTransaction.length - 1)">
-                <a class="page-link" href="#" onclick="return false">{{pagesCancelledTransaction.length}}</a>
-              </li>
-            </ng-container>
-
-            <li class="page-item" (click)="onPageIndexClickedCancelledOrder(currentPageIndexCancelledOrder + 1)">
-              <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
-                onclick="return false">Next</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      </mat-tab>
-
     </mat-tab-group>
 
   </div>
