Remove the Update Functionality

--- a/app/admin/components/asp-net-roles/asp-net-roles.component.html
+++ b/app/admin/components/asp-net-roles/asp-net-roles.component.html
@@ -452,8 +452,8 @@
         <div class="modal-footer">
           <button mat-stroked-button color="accent" class="mr-1" id="editCancelModal" data-dismiss="modal"
             type="button">Cancel</button>
-          <button mat-stroked-button color="primary" [disabled]="!editForm.valid"
-            (click)="onUpdateClick()">Update</button>
+          <!-- <button mat-stroked-button color="primary" [disabled]="!editForm.valid"
+            (click)="onUpdateClick()">Update</button> -->
         </div>
       </div>
     </div>
