Hide Dropdown if no one is tagged on the module children

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -185,6 +185,7 @@
             <span class="badge badge-pill badge-danger zerobadge{{ totalSumofPreparation | number }}">{{
               totalSumofPreparation | number }}</span>
           </a>
+          <ng-container *ngIf="StoreOrders === 1 || InternalOrders === 1">
           <mat-menu #menu_prep="matMenu">
             <ng-container *ngIf="StoreOrders === 1 || SOrders === 1  || SPreparedOrders === 1 || SDispatching === 1
             || SCancelledTransactions === 1">
@@ -212,6 +213,8 @@
             </button>
             </ng-container>
           </mat-menu>
+</ng-container>
+
         </ng-container>
 
         <!-- Online MRS Module -->
