Remove Move Order Count on Cancelled Raw Materials

--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -841,7 +841,7 @@
               <mat-card class="text-bold">Recieving Information </mat-card>
             </div>
             <div class="box-2">
-              <mat-card class="text-bold">Move Order No. {{totalStoreOrderDispatching}}</mat-card>
+              <mat-card class="text-bold">Move Order No. </mat-card>
             </div>
           </div>
 
