--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -697,13 +697,14 @@
                     <th>Uom</th>
                     <th>Serve</th>
                     <th class="hideObject">Total Items</th>
-                    <th class="text-center">Action</th>
+                    <ng-template *ngIf="item.totalPreparedItems != 1">
+                      <th class="text-center">Action</th>
+                    </ng-template>
                   </tr>
                 </thead>
 
                 <tbody>
                   <tr *ngFor="let item of itemList">
-                    <!-- <td>{{item.fK_dry_wh_orders_parent_id}}</td> -->
                     <td>{{item.id}}</td>
                     <td>{{item.mrs_item_code}}</td>
                     <td>{{item.mrs_item_description}}</td>
@@ -712,13 +713,13 @@
                     <td class="hideObject">{{c | number}}</td>
                     <td class="text-center">
 
-
-                      <button (click)="onCancelItemClick(item)" data-toggle="modal" data-target="#cancelOrderItemModal"
-                        data-backdrop="false" data-keyboard="false" class="editbtnStyle" color="warn"
-                        mat-stroked-button>
-                        <span class="fa fa-ban"></span> cancel
-                      </button>&nbsp;
-
+                      <ng-template *ngIf="item.totalPreparedItems != 1">
+                        <button (click)="onCancelItemClick(item)" data-toggle="modal"
+                          data-target="#cancelOrderItemModal" data-backdrop="false" data-keyboard="false"
+                          class="editbtnStyle" color="warn" mat-stroked-button>
+                          <span class="fa fa-ban"></span> cancel
+                        </button>&nbsp;
+                      </ng-template>
                     </td>
                   </tr>
                 </tbody>
