Module or for the child tagging enable the parent menu labtest

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -167,7 +167,8 @@
           <!-- Approval Module -->
         </ng-container>
 
-        <ng-container *ngIf="LabTest === 1 || ForLabTest === 1 ">
+        <ng-container *ngIf="LabTest === 1 || ForLabTest === 1 || ForApproval === 1 || LaboratoryTestRecords === 1
+         || RecordsWithAccessCode === 1">
           <!-- Lab Test Module -->
           <a [routerLink]=" ['/admin', 'forlabtest'] " mat-list-item routerLinkActive="link-active">
             <mat-icon>hourglass_empty</mat-icon>&nbsp;Lab Test &nbsp;&nbsp;
