Lab Test Badge is not showing on login debug

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -172,8 +172,8 @@
           <!-- Lab Test Module -->
           <a [routerLink]=" ['/admin', 'forlabtest'] " mat-list-item routerLinkActive="link-active">
             <mat-icon>hourglass_empty</mat-icon>&nbsp;Lab Test &nbsp;&nbsp;
-            <span class="badge badge-pill badge-danger zerobadge{{ totalforlabtestforapproval | number }}">{{
-              totalforlabtestforapproval | number }}</span>
+            <span class="badge badge-pill badge-danger zerobadge{{ totalForLabtest | number }}">{{
+              totalForLabtest | number }}</span>
           </a>
         </ng-container>
 
