--- a/app/components/labtest-module/for-labtest/for-labtest.component.html
+++ b/app/components/labtest-module/for-labtest/for-labtest.component.html
@@ -63,7 +63,7 @@
                     <th>PO No.</th>
                     <th>Item Code</th>
                     <th>Description</th>
-                    <th>Category</th>
+                    <!-- <th>Category</th> -->
                     <th>UOM</th>
                     <th>Supplier</th>
                     <th>Expiration Date</th>
@@ -86,7 +86,7 @@
                   <td>{{ item.po_number }}</td>
                   <td>{{ item.item_code }}</td>
                   <td>{{ item.item_description }}</td>
-                  <td>{{ item.category }}</td>
+                  <!-- <td>{{ item.category }}</td> -->
                   <td>{{ item.uom }}</td>
                   <td>{{ item.client_requestor }}</td>
                   <td>{{ item.lab_exp_date_extension | date: "MM/dd/yyyy" }}</td>
@@ -830,15 +830,18 @@
             </div>
             <div class="col-sm lbltext">
               <label for="" class="">Expiry Date:</label>
-              <input type="text" readonly autocomplete="off" id="txtbbd" class="form-control" name="bbd"
-                formControlName="lab_exp_date_extension" maxlength="30" />
+              <input type="text" readonly autocomplete="off" id="txtbbd_actual" class="form-control" name="bbd"
+                formControlName="lab_exp_date_extension" maxlength="30" txtExpiryDateActual/>
             </div>
             <div class="col-sm lbltext">
-              <label for="" class="">Shelf Life Extension:</label>
+              <label for="" class="">Shelf Life Extension : {{ShelfLifeExtension}}</label>
               <input type="date" [disabled]="true" value="{{ bbDate | date: 'yyyy-MM-dd'}}"
                 min="{{ bbDate | date: 'yyyy-MM-dd' }}" autocomplete="off" id="txtrshelf_ext"
-                class="form-control req-field" formControlName="lab_exp_date_extension" maxlength="30" />
+                class="form-control req-field" formControlName="lab_exp_date_extension"
+                 maxlength="30" 
+                 (change)="selectExpiryDate($event)" />
             </div>
+
             <div class="col-sm lbltext" [hidden]="true">
               <label for="" class="">Remarks</label>
               <select name="" id="" class="form-control req-field"
