--- a/app/components/labtest-module/for-labtest/for-labtest.component.scss
+++ b/app/components/labtest-module/for-labtest/for-labtest.component.scss
@@ -178,3 +178,10 @@ body {
 td {
   vertical-align: middle;
 }
+
+.upload {
+  font-weight: bold;
+  color: #28a745;
+  margin-left: 15px;
+  line-height: 36px;
+}
